# hwrs640_HW4_HY

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: default.yaml
notebooks/: _0_data.ipynb
outputs_run1_mse/: best.pt  history.json  last.pt  test_metrics.csv  test_predictions.npz  test_summary.json
outputs_run1_mse/figs/summary/: attributes_summary.csv
report/: _build_notebook.py  make.sh  report.html  report.ipynb
src/camelflow/: __init__.py  cli.py  data.py  evaluate.py  models.py  train.py  utils.py  visualization.py
tests/: test_data.py  test_model.py
