[project]
name = "camelflow"
version = "0.1.0"
description = "LSTM-based streamflow prediction on the minicamels CAMELS-US benchmark"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Hossein Yousefi Sohi", email = "hyousefi@arizona.edu" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "minicamels",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "torch>=2.5,<2.6",
    "scipy>=1.14",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
report = ["playwright>=1.50", "nbconvert[webpdf]>=7"]

[project.scripts]
camelflow = "camelflow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/camelflow"]

[tool.hatch.build.targets.sdist]
include = ["src/camelflow", "main.py", "README.md", "LICENSE", "configs"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
minicamels = { git = "https://github.com/BennettHydroLab/minicamels.git" }
torch = [{ index = "pytorch-cu121" }]
